<resources>
    <string name="app_name">Shop App</string>
    <string name="enjoy_with_offers">Enjoy \nWith Offers</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="email">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="phone">Phone</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="sign_up">Sign up</string>
    <string name="create_new_account">Create New Account..</string>
    <string name="login">Login</string>
    <string name="home">Home</string>
    <string name="offers">Offers</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="shop_now_it_s_faster">Shop now \nIt\'s faster</string>
    <string name="search_in_our_category">Search in our category</string>
    <string name="Searchinourproducts">Search in our products</string>
    <string name="details">details</string>
    <string name="buy">Buy</string>
    <string name="products_has_50_sale">Products has \n50% sale</string>
    <string name="confirm_your_infromation">Confirm \nYour Infromation</string>
    <string name="address">Address</string>
    <string name="update_info">Update info</string>
    <string name="next">Next</string>
</resources>