<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.auth.RegisterActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/enjoy_with_offers"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:paddingLeft="46dp"
        android:paddingRight="46dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:text="@string/name"
            android:textColor="@color/textBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/name_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_ed"
            android:hint="@string/enter_your_name"
            android:inputType="text"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/email"
            android:textColor="@color/textBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/email_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_ed"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/password"
            android:textColor="@color/textBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/password_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_ed"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/phone"
            android:textColor="@color/textBlack"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/phone_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_ed"
            android:hint="@string/enter_your_phone"
            android:inputType="number"
            android:maxLength="11"
            android:padding="10dp" />

        <TextView
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/shape_btn"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

</RelativeLayout>