<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.ConfirmInfoActivity">

    <ImageView
        android:id="@+id/image_back_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_back" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_back_confirmation"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:text="@string/confirm_your_infromation"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_white"
        android:orientation="vertical"
        android:paddingLeft="46dp"
        android:paddingRight="46dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/name"
            android:textColor="@color/textBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/name_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_ed"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/email"
            android:textColor="@color/textBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/email_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_ed"
            android:padding="10dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone"
            android:textColor="@color/textBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/phone_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_ed"
            android:padding="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/address"
            android:textColor="@color/textBlack"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/address_confirmation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_ed"
            android:padding="10dp" />
    </LinearLayout>


    <TextView
        android:id="@+id/btn_update_info_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_btn_2"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:layout_above="@id/btn_next_confirmation"
        android:text="@string/update_info"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp" />


    <TextView
        android:id="@+id/btn_next_confirmation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="46dp"
        android:layout_marginRight="46dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/shape_btn"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:textStyle="bold" />

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress_confirmation"
        android:visibility="gone"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>